--- a/css/app.css
+++ b/css/app.css
@@ -186,6 +186,10 @@ p {
     margin-top: 200px;
 }
 
+/*th,td {
+  padding: 0 300px 0 300px;
+}*/
+
 #guestBook {
         margin: 50px;
         margin-top: 200px;
